Content scroll visible fix and  obsolete codes removed

--- a/src/components/layout/mainLayout/styles.module.scss
+++ b/src/components/layout/mainLayout/styles.module.scss
@@ -34,7 +34,7 @@
     }
     &__content__area {
         margin: 10px 16px;
-        overflow-y: scroll;
+        overflow-y: auto;
 
     }
     &__content__area::-webkit-scrollbar {
@@ -45,9 +45,10 @@
         border-radius: 20px;
     }
     &__content__area::-webkit-scrollbar-thumb {
-        background-color: #fff;
-        border: 1x solid #052e50;
-        border-radius:5px ;
+        background-color: #e5e5e5;
+        border: 4px solid #001628;
+        opacity: 0.8;
+        border-radius: 5px;
     }
     &__content {
         padding: 15px;
